--- a/platforms/browser/create.html
+++ b/platforms/browser/create.html
@@ -18,7 +18,7 @@
 <body>
 	
 	<div class="wrapper">
-		<a href="http://pixelhint.com/multiple-steps-form-animation-using-jquery-css3" class="back_link"> <img src="img/arrow.png" class="back_arrow_icon" title="" alt=""/> Go back to the tutorial</a>
+        <a href="index.html" class="back_link"> <img src="img/arrow.png" class="back_arrow_icon" title="" alt=""/> Main Menu</a>
 		
 		<!--  start Form Steps  -->
 		<div class="steps" id="steps">
