--- a/platforms/browser/create.html
+++ b/platforms/browser/create.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
-	<title>Mulitple Steps Form Animation With JQuery & CSS3</title>
+	<title>Create Task</title>
 	<meta charset="utf-8">
 	<meta name="author" content="pixelhint.com">
 	<meta name="description" content="Mulitple Steps Form Animation With JQuery & CSS3"/>
