--- a/platforms/browser/index.html
+++ b/platforms/browser/index.html
@@ -1,27 +1,32 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/jquery.mobile-1.4.5.min.css" rel="stylesheet" />
+    <title> My First App</title>
+    <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/jquery.mobile-1.4.5.min.js"></script>
-    <title>INFY Task</title>
-    <script>
-        $(document).ready(function () {
-            $('#submit1').click(function () {
-                window.open("create.html");
-            });
-        });
-    </script>
 </head>
 <body>
-    <!--<div data-role="main" class="ui-content">
-        <a href="#myPopup" data-rel="popup" class="ui-btn ui-btn-inline ui-corner-all">Create Task</a>
+    <div data-role="header">
+        <a href="#" class="ui-btn ui-icon-home ui-btn-icon-left">Home</a>
+        <h1>Welcome To My Homepage</h1>
+        <a href="#" class="ui-btn ui-icon-search ui-btn-icon-left">Search</a>
+    </div>
+    <div data-role="navbar">
+        <ul>
+            <li><a href="http:\\www.facebook.com\">Facebook</a></li>
+            <li><a href="http:\\www.flipkart.com\">Flipkart</a></li>
+        </ul>
+    </div><!-- /navbar -->
 
-        <div data-role="popup" id="myPopup">
-            <div id="divId" style="display:none;"></div>
-        </div>
-    </div>-->
-    <button id="submit1">Create</button>
+
+    <div data-role="footer">
+        <div data-role="navbar">
+            <ul>
+                <li><a href="http:\\www.facebook.com\">Facebook</a></li>
+                <li><a href="http:\\www.flipkart.com\">Flipkart</a></li>
+            </ul>
+        </div><!-- /navbar -->
+    </div><!-- /footer -->
 </body>
 </html>
